--- a/nav.html
+++ b/nav.html
@@ -87,9 +87,9 @@
                     </div>-->
                 </div><!--美食天地-->
 
-                <div class="yosnav01"><!--网上订餐-->
+                <!--<div class="yosnav01">&lt;!&ndash;网上订餐&ndash;&gt;
                     <h3><a target="_blank" href="http://www.4008-197-197.com/">网上订餐</a></h3>
-                </div><!--网上订餐-->
+                </div>--><!--网上订餐-->
 
                 <!--<div class="yosnav01">&lt;!&ndash;餐厅分布&ndash;&gt;
                     <h3><a href="position.html">餐厅分布</a></h3>
